<resources>
    <string name="app_name">로아랑</string>

    <!-- Character -->
    <string name="character_image_description">캐릭터 이미지</string>
    <string name="character_more_menu_description">캐릭터 작업 더보기</string>
    <string name="character_delete">삭제</string>
    <string name="character_reload">갱신</string>

    <!-- Add Character -->
    <string name="add_character_title">캐릭터 추가</string>
    <string name="search_character">캐릭터 닉네임 입력</string>
    <string name="search">검색</string>
    <string name="cancel">취소</string>
    <string name="search_error">닉네임을 다시 입력해주세요.</string>
    <string name="search_empty">캐릭터 닉네임을 입력하세요.</string>
    <string name="add_character_success">의 정보를 추가하였습니다.</string>

    <!-- Homework -->
    <string name="character_class_image">캐릭터 클래스 이미지</string>
    <string name="homework_daily_title">일일 숙제</string>
    <string name="homework_daily_epona">에포나</string>
    <string name="homework_daily_chaos">카오스 던전</string>
    <string name="homework_daily_gadian">가디언 토벌</string>
    <string name="homework_weekly_title">주간 숙제</string>
    <string name="homework_weekly_end">엔드 컨텐츠</string>
    <string name="homework_event_title">일일 이벤트</string>
    <string name="homework_gate">카오스 게이트</string>
    <string name="homework_field">필드 보스</string>
    <string name="homework_adventure">모험섬</string>
    <string name="homework_delete_today">일일 숙제 해제</string>
    <string name="homework_delete_all">체크 모두 해제</string>

    <!-- Info -->
    <string name="info_auction_title">경매 손익 계산기</string>
    <string name="info_auction_number_of_people_title">인원 수 (단위: 명)</string>
    <string name="info_auction_lowest_price_title">경매장 최저가 (단위:골드)</string>
    <string name="info_auction_recommended_bid_amount_title">추천 입찰 금액 (단위:골드)</string>
    <string name="info_auction_break_even_point_title">손익 분기점 (단위:골드)</string>
    <string name="info_fee_title">거래 수수료 계산기</string>
    <string name="info_fee_amount_received_title">받는 금액</string>
    <string name="info_fee_amount_to_send_title">보낼 금액</string>

    <!-- Schedule -->
    <string name="schedule_content_image">일정표 콘텐츠 이미지</string>

    <!-- Setting -->
    <string name="setting_notice_title">공지 사항</string>
    <string name="setting_inquire_title">문의 하기</string>
    <string name="setting_patch_title">패치 로그</string>

    <!-- Bottom Menu -->
    <string name="tab_character">캐릭터</string>
    <string name="tab_homework">주간 숙제</string>
    <string name="tab_calender">일정표</string>
    <string name="tab_info">정보실</string>
    <string name="tab_setting">설정</string>
</resources>