<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/tab_character"
        android:icon="@drawable/icon_character"
        android:title="@string/tab_character" />

    <item
        android:id="@+id/tab_homework"
        android:icon="@drawable/icon_homework"
        android:title="@string/tab_homework" />

    <item
        android:id="@+id/tab_calender"
        android:icon="@drawable/icon_calendar"
        android:title="@string/tab_calender" />

    <item
        android:id="@+id/tab_info"
        android:icon="@drawable/icon_info"
        android:title="@string/tab_info" />

    <item
        android:id="@+id/tab_setting"
        android:icon="@drawable/icon_setting"
        android:title="@string/tab_setting" />

</menu>