<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DDDDDD"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:paddingTop="30dp"
        android:paddingBottom="30dp"
        android:elevation="10dp"
        android:src="@drawable/icon_small"
        android:background="@color/loa"/>

    <Button
        android:id="@+id/notice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/round_box"
        android:elevation="10dp"
        android:textSize="20sp"
        android:text="@string/setting_notice_title"/>

    <Button
        android:id="@+id/inquire"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/round_box"
        android:elevation="10dp"
        android:textSize="20sp"
        android:text="@string/setting_inquire_title" />

    <Button
        android:id="@+id/patch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/round_box"
        android:elevation="10dp"
        android:textSize="20sp"
        android:text="@string/setting_patch_title" />

</LinearLayout>