<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container_auction"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="16dp"
    android:layout_marginVertical="8dp"
    android:background="@drawable/background_card"
    android:elevation="12dp"
    android:padding="16dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/auction_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/auction_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info_auction_title"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/auction_number_of_people_title"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:text="@string/info_auction_number_of_people_title"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@id/auction_number_of_people"
        app:layout_constraintEnd_toStartOf="@id/auction_guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/auction_number_of_people" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/auction_number_of_people"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/auction_guideline"
        app:layout_constraintTop_toBottomOf="@id/auction_title">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/auction_lowest_price_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/info_auction_lowest_price_title"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@id/auction_lowest_price"
        app:layout_constraintEnd_toStartOf="@id/auction_guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/auction_lowest_price" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/auction_lowest_price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/auction_guideline"
        app:layout_constraintTop_toBottomOf="@id/auction_number_of_people">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/auction_recommended_bid_amount_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/info_auction_recommended_bid_amount_title"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@id/auction_recommended_bid_amount"
        app:layout_constraintEnd_toStartOf="@id/auction_guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/auction_recommended_bid_amount" />

    <TextView
        android:id="@+id/auction_recommended_bid_amount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:gravity="end"
        android:paddingVertical="12dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/auction_guideline"
        app:layout_constraintTop_toBottomOf="@id/auction_lowest_price"
        tools:text="1234.0" />

    <TextView
        android:id="@+id/auction_break_even_point_title"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:text="@string/info_auction_break_even_point_title"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@id/auction_break_even_point"
        app:layout_constraintEnd_toStartOf="@id/auction_guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/auction_break_even_point" />

    <TextView
        android:id="@+id/auction_break_even_point"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginTop="6dp"
        android:gravity="end"
        android:paddingVertical="12dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/auction_guideline"
        app:layout_constraintTop_toBottomOf="@id/auction_recommended_bid_amount"
        tools:text="1234.0" />

</androidx.constraintlayout.widget.ConstraintLayout>