<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container_fee"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="16dp"
    android:layout_marginVertical="8dp"
    android:background="@drawable/background_card"
    android:elevation="12dp"
    android:padding="16dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/container_auction">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/fee_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/fee_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info_fee_title"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/fee_amount_received_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/info_fee_amount_received_title"
        app:layout_constraintTop_toTopOf="@id/fee_amount_received"
        app:layout_constraintBottom_toBottomOf="@id/fee_amount_received"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/fee_guideline"
        android:textSize="15sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fee_amount_received"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/fee_guideline"
        app:layout_constraintTop_toBottomOf="@id/fee_title">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/fee_amount_to_send_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/info_fee_amount_to_send_title"
        app:layout_constraintTop_toTopOf="@id/fee_amount_to_send"
        app:layout_constraintBottom_toBottomOf="@id/fee_amount_to_send"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/fee_guideline"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/fee_amount_to_send"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginTop="6dp"
        android:gravity="end"
        android:paddingVertical="12dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/fee_guideline"
        app:layout_constraintTop_toBottomOf="@id/fee_amount_received"
        tools:text="1234.0" />

</androidx.constraintlayout.widget.ConstraintLayout>