<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="16dp"
    android:layout_marginVertical="8dp"
    android:background="@drawable/background_card"
    android:elevation="12dp"
    android:padding="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container_character"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/character_image"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:background="#00FFFFFF"
            android:contentDescription="@string/character_class_image"
            app:layout_constraintBottom_toBottomOf="@id/character_item_level"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/icon_color"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/character_nickname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/character_image"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Nickname Sample" />

        <TextView
            android:id="@+id/character_item_level"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="@id/character_nickname"
            app:layout_constraintStart_toStartOf="@id/character_nickname"
            app:layout_constraintTop_toBottomOf="@id/character_nickname"
            tools:text="Lv.1570.00" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container_daily"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/container_character">

        <TextView
            android:id="@+id/homework_daily_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/homework_daily_title"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container_epona"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/background_card"
            android:backgroundTint="@color/background_light_green"
            android:padding="10dp"
            app:layout_constraintEnd_toStartOf="@id/container_chaos"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/homework_daily_title">

            <TextView
                android:id="@+id/homework_daily_epona"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/homework_daily_epona"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/epona_1"
                android:layout_width="0dp"
                android:layout_height="3dp"
                android:layout_marginTop="5dp"
                android:background="@color/background_grey"
                app:layout_constraintEnd_toStartOf="@id/epona_2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/homework_daily_epona" />

            <View
                android:id="@+id/epona_2"
                android:layout_width="0dp"
                android:layout_height="3dp"
                android:layout_marginHorizontal="5dp"
                android:layout_marginTop="5dp"
                android:background="@color/background_grey"
                app:layout_constraintEnd_toStartOf="@id/epona_3"
                app:layout_constraintStart_toEndOf="@id/epona_1"
                app:layout_constraintTop_toBottomOf="@id/homework_daily_epona" />

            <View
                android:id="@+id/epona_3"
                android:layout_width="0dp"
                android:layout_height="3dp"
                android:layout_marginTop="5dp"
                android:background="@color/background_grey"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/epona_2"
                app:layout_constraintTop_toBottomOf="@id/homework_daily_epona" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container_chaos"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/background_card"
            android:backgroundTint="@color/background_light_green"
            android:padding="10dp"
            app:layout_constraintEnd_toStartOf="@id/container_gadian"
            app:layout_constraintStart_toEndOf="@id/container_epona"
            app:layout_constraintTop_toBottomOf="@id/homework_daily_title">

            <TextView
                android:id="@+id/homework_daily_chaos"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/homework_daily_chaos"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/chaos"
                android:layout_width="0dp"
                android:layout_height="3dp"
                android:layout_marginTop="5dp"
                android:background="@color/background_grey"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/homework_daily_chaos" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container_gadian"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/background_card"
            android:backgroundTint="@color/background_light_green"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/container_chaos"
            app:layout_constraintTop_toBottomOf="@id/homework_daily_title">

            <TextView
                android:id="@+id/homework_daily_gadian"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/homework_daily_gadian"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/gadian"
                android:layout_width="0dp"
                android:layout_height="3dp"
                android:layout_marginTop="5dp"
                android:background="@color/background_grey"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/homework_daily_gadian" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container_weekly"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/container_daily">

        <TextView
            android:id="@+id/homework_weekly_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/homework_weekly_title"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container_end"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/background_card"
            android:backgroundTint="@color/background_light_green"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/homework_weekly_title">

            <TextView
                android:id="@+id/homework_weekly_end"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/homework_weekly_end"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/end_1"
                android:layout_width="0dp"
                android:layout_height="3dp"
                android:layout_marginTop="5dp"
                android:background="@color/background_grey"
                app:layout_constraintEnd_toStartOf="@id/end_2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/homework_weekly_end" />

            <View
                android:id="@+id/end_2"
                android:layout_width="0dp"
                android:layout_height="3dp"
                android:layout_marginHorizontal="5dp"
                android:layout_marginTop="5dp"
                android:background="@color/background_grey"
                app:layout_constraintEnd_toStartOf="@id/end_3"
                app:layout_constraintStart_toEndOf="@id/end_1"
                app:layout_constraintTop_toBottomOf="@id/homework_weekly_end" />

            <View
                android:id="@+id/end_3"
                android:layout_width="0dp"
                android:layout_height="3dp"
                android:layout_marginTop="5dp"
                android:background="@color/background_grey"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/end_2"
                app:layout_constraintTop_toBottomOf="@id/homework_weekly_end" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>